--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a class="project_name">Bank Failures</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_BankFailures/" target="_blank" class="project_name">Bank Failures</a>
                     <p class="project_info_text">In light of the recent shutting down of Silicon Valley Bank. I start to wonder whether
                         this is the sign of another recession, or are we already in a recession. I decided to take a look at similar
                         bank failures happends in the past recet decades. Here is a visualization of bank failure cases since 2000.
@@ -70,7 +70,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a class="project_name">Bussiness Finder</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_YelpBusinessPittsburgh/" target="_blank" class="project_name">Bussiness Finder</a>
                     <p class="project_info_text">What is the best way to use visualization to explore the bussiness of an area? In this visualization,
                         I applied the context + focus design principle, which allows a user to have an overview of bussinesses in an area, and simulatenously access the 
                         details of a bussiness they are interested in.
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a class="project_name">Crimte v.s. Bussiness</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_BusinessCrimePhiladelphia/" class="project_name">Crimte v.s. Bussiness</a>
                     <p class="project_info_text">How does the crime rate impact bussiness? In this visualization,
                         we examine crime and bussiness distribution in Philadelphia. No wonder more crimes lead to fewer bussinesses, but we found one district that has both high numbers of bussiness and crimes. 
                     </p>
@@ -97,7 +97,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a class="project_name">Bussisness after Pandemic?</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Bussisness after Pandemic?</a>
                     <p class="project_info_text">How does the pandemic change the landscape of bussiness, and is now a good time to start a new one? In this visualization,
                         we visualize the reviews of bussinesses before and after pandmeic. Looks like there is a significant drop of review count of bussiness on Yelp. 
                     </p>
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a class="project_name">What is your Pokémon?</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_PokemonAbilities/" target="_blank" class="project_name">What is your Pokémon?</a>
                     <p class="project_info_text">
                         Welcome to the fascinating world of Pokémon, and there is a Pokémon for everyone. This visualization showcases the wealth of information 
                         available on these extraordinary beings. Come to check out and collect your favorite Pokémons!
@@ -124,7 +124,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a class="project_name">Have we planted more trees?</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_Trees/" target="_blank" class="project_name">Have we planted more trees?</a>
                     <p class="project_info_text">
                         Our climate is changing dramatically, largely due to extra green houses gas from human activities. Planting more trees will help, and trees are beautiful!
                         So, how did we do in terms of tree planning in San Fransico? The visualization tells you what are the popular types of trees, how many have been planted and more.
