--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_BankFailures/" target="_blank" class="project_name">Bank Failures</a>
-                    <p class="project_info_text">In light of the recent shutting down of Silicon Valley Bank. I start to wonder whether
-                        this is the sign of another recession, or are we already in a recession. I decided to take a look at similar
-                        bank failures happends in the past recet decades. Here is a visualization of bank failure cases since 2000.
+                    <p class="project_info_text">Following the recent shutdown of Silicon Valley Bank, I began to ponder whether this is a sign of another recession,
+                        or if we are already in one. To gain some perspective, I took a look at similar bank failures that have occurred in the past few decades.
+                        As a result, I have put together a visualization of bank failure cases since 2000.
                     </p>
                 </div>
             </div>
@@ -71,9 +71,9 @@
                 </div>
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_YelpBusinessPittsburgh/" target="_blank" class="project_name">Bussiness Finder</a>
-                    <p class="project_info_text">What is the best way to use visualization to explore the bussiness of an area? In this visualization,
-                        I applied the context + focus design principle, which allows a user to have an overview of bussinesses in an area, and simulatenously access the 
-                        details of a bussiness they are interested in.
+                    <p class="project_info_text">If you're looking to explore the businesses of a particular area, what's the best way to do so using visualization?
+                        One effective approach is to apply the context + focus design principle. This allows users to obtain an overview of all the businesses in the
+                        area while also being able to access specific details about a business they may be interested in.
                     </p>
                 </div>
             </div>
@@ -85,8 +85,10 @@
                 </div>
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_BusinessCrimePhiladelphia/" class="project_name">Crimte v.s. Bussiness</a>
-                    <p class="project_info_text">How does the crime rate impact bussiness? In this visualization,
-                        we examine crime and bussiness distribution in Philadelphia. No wonder more crimes lead to fewer bussinesses, but we found one district that has both high numbers of bussiness and crimes. 
+                    <p class="project_info_text"> Have you ever wondered how crime rates impact businesses? In this visualization,
+                        we take a closer look at the distribution of crime and businesses in Philadelphia. As expected,
+                        we found that higher crime rates tend to correlate with fewer businesses.
+                        However, we also discovered one district that has high numbers of both businesses and crimes.
                     </p>
                 </div>
             </div>
@@ -98,8 +100,9 @@
                 </div>
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Bussisness after Pandemic?</a>
-                    <p class="project_info_text">How does the pandemic change the landscape of bussiness, and is now a good time to start a new one? In this visualization,
-                        we visualize the reviews of bussinesses before and after pandmeic. Looks like there is a significant drop of review count of bussiness on Yelp. 
+                    <p class="project_info_text">Amid the ongoing pandemic, many are wondering how it has affected the business landscape and whether
+                        it's a good time to start a new venture. To shed some light on this topic, we've visualized the reviews of businesses before
+                        and after the pandemic. It appears that there has been a significant drop in the number of reviews for businesses on Yelp.
                     </p>
                 </div>
             </div>
@@ -112,8 +115,9 @@
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_PokemonAbilities/" target="_blank" class="project_name">What is your Pokémon?</a>
                     <p class="project_info_text">
-                        Welcome to the fascinating world of Pokémon, and there is a Pokémon for everyone. This visualization showcases the wealth of information 
-                        available on these extraordinary beings. Come to check out and collect your favorite Pokémons!
+                        Welcome to the fascinating world of Pokémon, where there's a Pokémon for everyone to enjoy.
+                        Our visualization showcases the wealth of information available on these extraordinary beings.
+                        Come check it out and collect your favorite Pokémons today!
                     </p>
                 </div>
             </div>
@@ -126,8 +130,9 @@
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_Trees/" target="_blank" class="project_name">Have we planted more trees?</a>
                     <p class="project_info_text">
-                        Our climate is changing dramatically, largely due to extra green houses gas from human activities. Planting more trees will help, and trees are beautiful!
-                        So, how did we do in terms of tree planning in San Fransico? The visualization tells you what are the popular types of trees, how many have been planted and more.
+                        Our climate is changing dramatically, largely due to the extra greenhouse gases emitted by human activities.
+                        Planting more trees can help mitigate these effects, and not to mention, trees are beautiful! Curious about San Francisco's
+                        tree planting efforts? Our visualization offers insights into the popular types of trees, the number of trees planted, and more.
                     </p>
                 </div>
             </div>
