--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="project_info project_info_right">
                     <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Bussisness after Pandemic?</a>
-                    <p class="project_info_text">Amid the ongoing pandemic, many are wondering how it has affected the business landscape and whether
+                    <p class="project_info_text">During the recent pandemic, many were wondering how it has affected the business landscape and whether
                         it's a good time to start a new venture. To shed some light on this topic, we've visualized the reviews of businesses before
                         and after the pandemic. It appears that there has been a significant drop in the number of reviews for businesses on Yelp.
                     </p>
