--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a href="https://hayleyzhl.github.io/Visualization_YelpBusinessPittsburgh/" target="_blank" class="project_name">Bussiness Finder</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_YelpBusinessPittsburgh/" target="_blank" class="project_name">Business Finder</a>
                     <p class="project_info_text">If you're looking to explore the businesses of a particular area, what's the best way to do so using visualization?
                         One effective approach is to apply the context + focus design principle. This allows users to obtain an overview of all the businesses in the
                         area while also being able to access specific details about a business they may be interested in.
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a href="https://hayleyzhl.github.io/Visualization_BusinessCrimePhiladelphia/" class="project_name">Crimte v.s. Bussiness</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_BusinessCrimePhiladelphia/" class="project_name">Crime v.s. Business</a>
                     <p class="project_info_text"> Have you ever wondered how crime rates impact businesses? In this visualization,
                         we take a closer look at the distribution of crime and businesses in Philadelphia. As expected,
                         we found that higher crime rates tend to correlate with fewer businesses.
@@ -99,7 +99,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Bussisness after Pandemic?</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Business after Pandemic?</a>
                     <p class="project_info_text">During the recent pandemic, many were wondering how it has affected the business landscape and whether
                         it's a good time to start a new venture. To shed some light on this topic, we've visualized the reviews of businesses before
                         and after the pandemic. It appears that there has been a significant drop in the number of reviews for businesses on Yelp.
@@ -128,7 +128,7 @@
                     </a>
                 </div>
                 <div class="project_info project_info_right">
-                    <a href="https://hayleyzhl.github.io/Visualization_Trees/" target="_blank" class="project_name">Have we planted more trees?</a>
+                    <a href="https://hayleyzhl.github.io/Visualization_Trees/" target="_blank" class="project_name">Have we planted enough trees?</a>
                     <p class="project_info_text">
                         Our climate is changing dramatically, largely due to the extra greenhouse gases emitted by human activities.
                         Planting more trees can help mitigate these effects, and not to mention, trees are beautiful! Curious about San Francisco's
