--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     to effectively communicate information.
                     I obtained my Bachelor degree with honors from the Department of Computer Science, University of Toronto.  
                 </p>
+                <p class = "bio_text bio_text_horizontal">
+                    Below are some visualizations projects I worked on using D3.js. More to come!
+                </p>
                 <p>
                     <a  href="CV_Hayley.pdf" target="_blank" class="contact_logo" > <i class="fas fa-file-alt fa-1x" data-fa-transform="down-10"></i></a>
                     <a  href="mailto:zl846@cornell.edu" target="_blank" class="contact_logo" style="margin-left: 10px;"><i class="fas fa-envelope fa-1x " data-fa-transform="down-10"></i></a>
