--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!--base href="/website/"/-->
-    <title>Hayley Lin </title>
+    <title>Hayley Zhi Lin </title>
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,7 +33,8 @@
                     I obtained my Bachelor degree with honors from the Department of Computer Science, University of Toronto.  
                 </p>
                 <p class = "bio_text bio_text_horizontal">
-                    Below are some visualizations projects I worked on using D3.js. More to come!
+                    Below are some visualizations projects I worked on using D3.js.
+                    More to come!
                 </p>
                 <p>
                     <a  href="CV_Hayley.pdf" target="_blank" class="contact_logo" > <i class="fas fa-file-alt fa-1x" data-fa-transform="down-10"></i></a>
