changed order of projects

--- a/index.html
+++ b/index.html
@@ -98,20 +98,6 @@
             </div>
             <div class="project project_horizontal">
                 <div class="project_thumb project_thumb_right">
-                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank">
-                        <img class="projectthumbnail projectthumbnail_right" src="assets\projects\bussinessvis\thumbnail.png">
-                    </a>
-                </div>
-                <div class="project_info project_info_right">
-                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Business after Pandemic?</a>
-                    <p class="project_info_text">During the recent pandemic, many were wondering how it has affected the business landscape and whether
-                        it's a good time to start a new venture. To shed some light on this topic, we've visualized the reviews of businesses before
-                        and after the pandemic. It appears that there has been a significant drop in the number of reviews for businesses on Yelp.
-                    </p>
-                </div>
-            </div>
-            <div class="project project_horizontal">
-                <div class="project_thumb project_thumb_right">
                     <a href="https://hayleyzhl.github.io/Visualization_PokemonAbilities/" target="_blank">
                         <img class="projectthumbnail projectthumbnail_right" src="assets\projects\pokemon\thumbnail.png">
                     </a>
@@ -122,6 +108,20 @@
                         Welcome to the fascinating world of Pokémon, where there's a Pokémon for everyone to enjoy.
                         Our visualization showcases the wealth of information available on these extraordinary beings.
                         Come check it out and collect your favorite Pokémons today!
+                    </p>
+                </div>
+            </div>
+            <div class="project project_horizontal">
+                <div class="project_thumb project_thumb_right">
+                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank">
+                        <img class="projectthumbnail projectthumbnail_right" src="assets\projects\bussinessvis\thumbnail.png">
+                    </a>
+                </div>
+                <div class="project_info project_info_right">
+                    <a href="https://hayleyzhl.github.io/Visualization_YelpReviews/" target="_blank" class="project_name">Business after Pandemic?</a>
+                    <p class="project_info_text">During the recent pandemic, many were wondering how it has affected the business landscape and whether
+                        it's a good time to start a new venture. To shed some light on this topic, we've visualized the reviews of businesses before
+                        and after the pandemic. It appears that there has been a significant drop in the number of reviews for businesses on Yelp.
                     </p>
                 </div>
             </div>
@@ -142,6 +142,6 @@
             </div>
         </div>
     </div>
-<body>
+</body>
 
 </html>
