added a new project

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
         <div id="projects">
             <div class="project project_horizontal">
                 <div class="project_thumb project_thumb_right">
+                    <a href="https://hayleyzhl.github.io/Visualization_ChatGPT/" target="_blank">
+                        <img class="projectthumbnail projectthumbnail_right" src="assets\projects\chatgpt\thumbnail.png">
+                    </a>
+                </div>
+                <div class="project_info project_info_right">
+                    <a href="https://hayleyzhl.github.io/Visualization_ChatGPT/" target="_blank" class="project_name">CHATGPT UNVEILED</a>
+                    <p class="project_info_text"> As AI shapes our world, ChatGPT emerges as a landmark in technology.
+                        Yet, it brings intriguing questions about societal implications.
+                        This project uses interactive visualizations to tell the story of ChatGPT, revealing its history,
+                        milestones, and impact on humanity. Embark on this journey to understand the fascinating world of ChatGPT.
+                    </p>
+                </div>
+            </div>
+            <div class="project project_horizontal">
+                <div class="project_thumb project_thumb_right">
                     <a href="https://hayleyzhl.github.io/Visualization_BankFailures/" target="_blank">
                         <img class="projectthumbnail projectthumbnail_right" src="assets\projects\bankfailure\thumbnail.png">
                     </a>
