--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     More to come!
                 </p>
                 <p>
-                    <a  href="CV_Hayley.pdf" target="_blank" class="contact_logo" > <i class="fas fa-file-alt fa-1x" data-fa-transform="down-10"></i></a>
+                    <a  href="Hayley_Resume.pdf" target="_blank" class="contact_logo" > <i class="fas fa-file-alt fa-1x" data-fa-transform="down-10"></i></a>
                     <a  href="mailto:zl846@cornell.edu" target="_blank" class="contact_logo" style="margin-left: 10px;"><i class="fas fa-envelope fa-1x " data-fa-transform="down-10"></i></a>
                 </p>
             </div>
