--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
                 <a href="#" class="image"><img class = "photo" src="assets/images/hayleylin.jpeg"/></a>
             </div>
             <div id= "bio_right" class="bio_right_horizontal">
-                <p class = "bio_text bio_text_horizontal"> I am a master student at the College of Computing and Information Science at the Cornell University. 
-                    I'm passionate about interaction design and data visualization! 
+                <p class = "bio_text bio_text_horizontal"> I am Hayley Lin, a graduate of the College of Computing and
+                    Information Science at Cornell University, where I earned my Master's degree.
+                    I am deeply passionate about interaction design and data visualization!
+
                 </p>
                 <p class = "bio_text bio_text_horizontal">
-                    I have worked on multiple projects that employ interaction and visualization techniques
-                    to effectively communicate information.
-                    I obtained my Bachelor degree with honors from the Department of Computer Science, University of Toronto.  
+                    My journey has been marked by numerous projects where I've leveraged interaction and visualization techniques to communicate information effectively. Prior to my Master's, I graduated with honors from the Department of Computer Science at the University of Toronto.
                 </p>
                 <p class = "bio_text bio_text_horizontal">
-                    Below are some visualizations projects I worked on using D3.js.
-                    More to come!
+                    Below, you'll find a selection of my visualization projects, all crafted using D3.js. Stay tuned for more exciting work to come!
                 </p>
                 <p>
                     <a  href="Hayley_Resume.pdf" target="_blank" class="contact_logo" > <i class="fas fa-file-alt fa-1x" data-fa-transform="down-10"></i></a>
